# Problems

./: README.md
CMake/: CMakeLists.txt  main.cpp
CMake/PrinterLib/: CMakeLists.txt  printer.cpp  printer.h
Docker/: Dockerfile  run_cmake.sh
script/: check_file_or_dir.sh  line_count.sh  list_files_and_dirs_recursive.sh  list_files_recursive.sh  reverse_number.sh
